--- a/analysis.qmd
+++ b/analysis.qmd
@@ -12,17 +12,8 @@ import matplotlib.pyplot as plt
 import requests
 from pathlib import Path
 
-# Download the data if not already present
-url = "https://www.rug.nl/ggdc/historicaldevelopment/maddison/data/mpd2018.xlsx"
-output_file = "mpd2018.xlsx"
-
-if not Path(output_file).exists():
-    response = requests.get(url)
-    with open(output_file, "wb") as f:
-        f.write(response.content)
-
 # Read the Excel file
-df = pd.read_excel(output_file, sheet_name="Full data")
+df = pd.read_excel("mpd2018.xlsx", sheet_name="Full data")
 
 # Filter for Former USSR
 ussr_data = df[df['country'] == 'Former USSR'].copy()
@@ -30,26 +21,32 @@ ussr_data = df[df['country'] == 'Former USSR'].copy()
 # Sort by year
 ussr_data = ussr_data.sort_values('year')
 
+# Remove data before 1884
+ussr_data = ussr_data[ussr_data['year'] >= 1884]
+
 # Calculate GDP (using population and GDP per capita)
 ussr_data['total_gdp'] = ussr_data['rgdpnapc'] * ussr_data['pop'] * 1000  # pop is in thousands
 
 # Calculate year-over-year growth rates
-ussr_data['gdp_growth'] = ussr_data['total_gdp'].pct_change() * 100
-ussr_data['gdp_per_capita_growth'] = ussr_data['rgdpnapc'].pct_change() * 100
+ussr_data['gdp_growth'] = ussr_data['total_gdp'].pct_change(fill_method=None) * 100
+ussr_data['gdp_per_capita_growth'] = ussr_data['rgdpnapc'].pct_change(fill_method=None) * 100
+```
 
-# Create the plots
-plt.figure(figsize=(15, 10))
-
+```{python}
+#| fig-cap: "GDP Growth Rate"
 # Plot 1: GDP Growth Rate
-plt.subplot(2, 1, 1)
 plt.plot(ussr_data['year'], ussr_data['gdp_growth'], marker='o')
 plt.title('USSR GDP Growth Rate (%)')
 plt.xlabel('Year')
 plt.ylabel('Growth Rate (%)')
 plt.grid(True)
+plt.show()
 
+```
+
+```{python}
+#| fig-cap: "GDP per Capita Growth Rate"
 # Plot 2: GDP per Capita Growth Rate
-plt.subplot(2, 1, 2)
 plt.plot(ussr_data['year'], ussr_data['gdp_per_capita_growth'], marker='o', color='orange')
 plt.title('USSR GDP per Capita Growth Rate (%)')
 plt.xlabel('Year')
@@ -58,7 +55,9 @@ plt.grid(True)
 
 plt.tight_layout()
 plt.show()
+```
 
+```{python}
 # Display summary statistics
 print("\nUSSR GDP Growth Analysis")
 print("-" * 30)
