--- a/periods.qmd
+++ b/periods.qmd
@@ -20,9 +20,12 @@ ussr_data = df[df['country'] == 'Former USSR'].copy()
 # Sort by year
 ussr_data = ussr_data.sort_values('year')
 
+# Remove data before 1884
+ussr_data = ussr_data[ussr_data['year'] >= 1884]
+
 # Calculate GDP (using population and GDP per capita)
 ussr_data['total_gdp'] = ussr_data['rgdpnapc'] * ussr_data['pop'] * 1000  # pop is in thousands
-ussr_data['gdp_growth'] = ussr_data['total_gdp'].pct_change() * 100
+ussr_data['gdp_growth'] = ussr_data['total_gdp'].pct_change(fill_method=None) * 100
 
 # Define periods
 periods = [
@@ -30,7 +33,7 @@ periods = [
     (1914, 1920, "WWI & Civil War\n(1914-1920)"),
     (1921, 1928, "NEP Period\n(1921-1928)"),
     (1929, 1941, "Early Soviet\n(1929-1941)"),
-    (1941, 1945, "WWII\n(1941-1945)"),
+    # (1941, 1945, "WWII\n(1941-1945)"),
     (1945, 1955, "Post-War Recovery\n(1945-1955)"),
     (1956, 1991, "Late Soviet\n(1956-1991)"),
     (1992, 1998, "Post-Soviet Crisis\n(1992-1998)"),
@@ -67,14 +70,14 @@ avg_1929_1955_no_war = ussr_data.loc[mask_without_war, 'gdp_growth'].mean()
 std_1929_1955_no_war = ussr_data.loc[mask_without_war, 'gdp_growth'].std()
 
 # Add special periods to the list
-period_averages.append({
-    'period': '1929-1955\n(including WWII)',
-    'avg_growth': avg_1929_1955,
-    'std_growth': std_1929_1955,
-    'n_years': mask_1929_1955.sum(),
-    'start_year': 1929,
-    'end_year': 1955
-})
+# period_averages.append({
+#     'period': '1929-1955\n(including WWII)',
+#     'avg_growth': avg_1929_1955,
+#     'std_growth': std_1929_1955,
+#     'n_years': mask_1929_1955.sum(),
+#     'start_year': 1929,
+#     'end_year': 1955
+# })
 period_averages.append({
     'period': '1929-1955\n(excluding WWII)',
     'avg_growth': avg_1929_1955_no_war,
@@ -86,9 +89,12 @@ period_averages.append({
 
 # Create DataFrame for plotting
 df_plot = pd.DataFrame(period_averages)
+```
 
+```{python}
+#| fig-cap: "Average GDP Growth Rate by Period"
 # Create the bar plot with error bars
-plt.figure(figsize=(15, 8))
+plt.figure()
 bars = plt.bar(df_plot['period'], df_plot['avg_growth'],
                yerr=df_plot['std_growth'], capsize=5)
 
@@ -117,6 +123,9 @@ for row in period_averages:
     print(f"  Average Growth: {row['avg_growth']:.2f}%")
     print(f"  Standard Deviation: {row['std_growth']:.2f}%")
     print(f"  Number of Years: {row['n_years']}")
+```
+
+```{python}
 
 # Create a table with the statistics
 stats_df = pd.DataFrame(period_averages)
