Refactor statistics display in periods.qmd to use tabulate for markdown output and update requirements.txt to include tabulate dependency

--- a/periods.qmd
+++ b/periods.qmd
@@ -114,22 +114,18 @@ for bar in bars:
 
 plt.tight_layout()
 plt.show()
-
-# Display the detailed statistics
-print("\nDetailed Statistics by Period")
-print("-" * 40)
-for row in period_averages:
-    print(f"\n{row['period']}:")
-    print(f"  Average Growth: {row['avg_growth']:.2f}%")
-    print(f"  Standard Deviation: {row['std_growth']:.2f}%")
-    print(f"  Number of Years: {row['n_years']}")
 ```
 
 ```{python}
+#| output: asis
+from tabulate import tabulate
 
 # Create a table with the statistics
 stats_df = pd.DataFrame(period_averages)
 stats_df = stats_df[['period', 'avg_growth', 'std_growth', 'n_years']]
 stats_df.columns = ['Period', 'Average Growth (%)', 'Std Dev (%)', 'Years']
-display(stats_df.round(2))
+
+# Convert the DataFrame to a markdown table
+markdown_table = tabulate(stats_df.round(2), headers='keys', tablefmt='pipe', showindex=False)
+print(markdown_table)
 ```
